--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -75,7 +75,7 @@ admin_34 : "ғᴀɪʟᴇᴅ ᴛᴏ sᴇᴇᴋ."
 
 # Start
 start_1 : "ᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {0}.\n{1} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ.\n\nғᴏʀ ɢᴇᴛᴛɪɴɢ ᴀɴʏ ᴛʏᴩᴇ ᴏғ ʜᴇʟᴩ ʏᴏᴜ ᴄᴀɴ ᴊᴏɪɴ ᴏᴜʀ sᴜᴩᴩᴏʀᴛ ɢʀᴏᴜᴩ."
-start_2 : "━━━━━━━━━━━━━━━━\n\n💥 ʜᴇʟʟᴏ, ɪ ᴀᴍ ˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™ 🥀 sᴜᴘᴇʀ ғᴀsᴛ ᴠᴄ ᴘʟᴀʏᴇʀ\nʙᴏᴛ ғᴏʀ ᴛᴇʟᴇɢʀᴀᴍ ɢʀᴏᴜᴘs🌼😇 ..\n\n┏━━━━━━━━━━━━━━━━━┓\n┣★ 𝐃𝐄𝐕𝐄𝐋𝐎𝐏𝐄𝐑 ➪ : [◤ᴍʀ★ᴘᴇʀꜰᴇᴄᴛ◢](https://t.me/MrPerfectXd)\n┣★ 𝐔𝐏𝐃𝐀𝐓𝐄𝐒 ➪ : [ʙᴏᴛ ᴜᴘᴅᴀᴛᴇ](https://t.me/Our_Groupps)\n┣★ 𝐒𝐔𝐏𝐏𝐎𝐑𝐓 ➪ : [ᴄʜᴀᴛᴛɪɴɢ Gʀᴏᴜᴘ](https://t.me/Musical_Beatsz)\n┗━━━━━━━━━━━━━━━━━┛\n\n💞 ɪғ ʏᴏᴜ ʜᴀᴠᴇ ᴀɴʏ ǫᴜᴇsᴛɪᴏɴs ᴛʜᴇɴ\nᴅᴍ ᴛᴏ ᴍʏ [◤ᴍʀ★ᴘᴇʀꜰᴇᴄᴛ◢](https://t.me/MrPerfectXd) ...\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+start_2 : "💖💫 ʜᴇʟʟᴏ, ɪ ᴀᴍ ˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™ 🫧🥀 \nsᴜᴘᴇʀ ғᴀsᴛ ᴠᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ ғᴏʀ ᴛᴇʟᴇɢʀᴀᴍ ɢʀᴏᴜᴘs 😌❤️‍🔥👻.\n\n┏━━━━━━━━━━━━━━━━━┓\n┣★ 𝔻𝔼𝕍𝔼𝕃𝕆ℙ𝔼ℝ ➪ : [◤ᴍʀ★ᴘᴇʀꜰᴇᴄᴛ◢](https://t.me/MrPerfectXd)\n┣★ 𝕆𝕌ℝ 𝔾ℝ𝕆𝕌ℙ𝕊  ➪ : [𝑶𝒖𝒓 𝑮𝒓𝒐𝒖𝒑𝒔](https://t.me/Our_Groupps)\n┣★ 𝕊𝕌ℙℙ𝕆ℝ𝕋      ➪ : [𝑺𝒖𝒑𝒑𝒐𝒓𝒕 𝑮𝒓𝒐𝒖𝒑](https://t.me/Musical_Beatsz)\n┗━━━━━━━━━━━━━━━━━┛\n\n❤️‍🔥  ɪғ ʏᴏᴜ ʜᴀᴠᴇ ᴀɴʏ ǫᴜᴇsᴛɪᴏɴs ᴛʜᴇɴ\nᴅᴍ ᴛᴏ ᴍʏ [◤ᴍʀ★ᴘᴇʀꜰᴇᴄᴛ◢](https://t.me/MrPerfectXd) ❤️✨"
 start_3 : "Tʜᴀɴᴋs Fᴏʀ Aᴅᴅɪɴɢ Mᴇ•🦋 {0} ❤️\n-------------------------\n\nTomXjerry Usage:\n1.Pʟᴀᴇsᴇ Mᴀᴋᴇ Mᴇ ᴀᴅᴍɪɴ Hᴇʀᴇ!\n2. Usᴇ /play Sᴏɴɢ's Nᴀᴍᴇ\n\n\n▰▰▰▰▰▰▰▰▰▰▰▰▰\n ❛- ˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™\n A Bᴇsᴛ Mᴜsɪᴄ Pʟᴀʏᴇʀ\n ★Aʟʟ Oᴠᴇʀ Tɢ★\n▰▰▰▰▰▰▰▰▰▰▰▰▰\n\n ⋐•Assɪsᴛᴀɴᴛ UID: @{1}\n ⋐•Assɪsᴛᴀɴᴛ ID : {2}"
 start_4 : "ᴛʜᴇ ᴏᴡɴᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
 start_5 : "ᴛʜᴇ sᴜᴅᴏ ᴜsᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ."
@@ -225,10 +225,10 @@ queue_4 : "**💘 ᴀᴅᴅᴇᴅ ᴛᴏ ǫᴜᴇᴜᴇ ᴀᴛ #{0}**\n\n**🍒 
 queue_5 : "ᴏɴʟʏ ᴏɴᴇ ᴛʀᴀᴄᴋ ɪs ɪɴ ǫᴜᴇᴜᴇ, ᴀᴅᴅ sᴏᴍᴇ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ɪɴ ǫᴜᴇᴜᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇ."
 
 # All Streaming Lines
-stream_1 : "»🥀 **˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™** «\n\n💖 **ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ:** {0} \n🍒**ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ:** [ʜᴇʀᴇ]({1})"
-stream_2 : "»🥀 **˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™** «\n\n💖 **ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ:** {0} "
-stream_3 : "»🥀 **˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™** «\n\n📌 **ᴛɪᴛʟᴇ:** {0}\n🕕 **ᴅᴜʀᴀᴛɪᴏɴ:** {1}\n💖 **ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ:** {2} "
-stream_4 : "»🥀 **˹● 𝑻𝑶𝑴 ✘ 𝑱𝑬𝑹𝑹𝒀 𝑴𝑼𝑺𝑰𝑪 ●˼™** «\n\n📌 **ᴛɪᴛʟᴇ:** [{0}]({1})\n🕕 **ᴅᴜʀᴀᴛɪᴏɴ:** {2}\n💖 **ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ:** {3} "
+stream_1 : "»🥀 ✯ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✯ 🥀\n\n✨ ᴛɪᴛʟᴇ ✨: {0} \n❤️‍🔥 ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ❤️‍🔥: {1} \n🔎 ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ 🔍: [ʜᴇʀᴇ]({2})"
+stream_2 : "»🥀 ✯ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✯ 🥀\n\n✨ ᴛɪᴛʟᴇ ✨: {0} \n❤️‍🔥 ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ❤️‍🔥:{1}\n🔎 ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ 🔍:[ʜᴇʀᴇ]({2})"
+stream_3 : "»🥀 ✯ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✯ 🥀\n\n✨ ᴛɪᴛʟᴇ ✨: {0}\n❤️‍🔥 ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ❤️‍🔥: {1}\n🔎 ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ 🔍:[ʜᴇʀᴇ]({2})"
+stream_4 : "»🥀 ✯ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✯ 🥀\n\n✨ ᴛɪᴛʟᴇ ✨: [{0}]({1})\n❤️‍🔥 ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ❤️‍🔥: {2}\n🔎 ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ 🔍:[ʜᴇʀᴇ]{3} "
 
 # Inline Buttons
 
